<resources>

    <string name="app_name">¡Transporte YA!</string>
    <string name="tituloLoginTextView">Inicio de Sesión</string>
    <string name="texto_contrasena">Contraseña</string>
    <string name="texto_confirmar_contrasena">Confirmar contraseña</string>
    <string name="texto_usuario">Correo electrónico</string>
    <string name="texto_btn_ingreso">Ingresar</string>
    <string name="texto_btn_registro">Registrarse</string>
    <string name="tituloRegistroTextView">Registrarse</string>
    <string name="texto_btn_registro_usuario">Usuario</string>
    <string name="texto_btn_registro_propietario">Propietario</string>
    <string name="descripcion_ico_usuario">Ícono Usuario</string>
    <string name="descripcion_ico_propietario">Ícono Propietario</string>
    <string name="exitoso">Ahora estás logueado como administrador</string>
    <string name="tituloRegistroUsuarioTextView">Registro de Usuarios</string>
    <string name="tituloRegistroPropietarioTextView">Registro de Propietario</string>
    <string name="primerNombreUsuarios">Nombres</string>
    <string name="apellidosUsuarios">Apellidos</string>
    <string name="btn_registroUsuario">Registrarme</string>
    <string name="titulo_toolbar">Bienvenido</string>
    <string name="tituloUsuarioLogueado">Bienvenido</string>
    <string name="btnCerrarSesion">Bienvenido</string>
    <string name="cantidadVehiculos">Consultar vehículos registrados</string>
    <string name="ayudaMarca">Marca del vehículo</string>
    <string name="ayudaPlaca">Placa del vehículo</string>
    <string name="t_btn_guardarVehiculo">Registrar vehículo</string>
    <string name="t_btn_irRegVeh">Registrar nuevo vehículo</string>
    <string name="t_btn_irAsignarConductorVeh">Asignar conductor a vehículo</string>
    <string name="t_btn_IrProgReco">Programar una recogida</string>
    <string name="t_btn_irEstadoSolicitudes">Ver estado de mis solicitudes</string>
    <string name="t_titulo_crearRecogida">Crear una recogida</string>
    <string name="textoCampoTipoDoc">Tipo de carga</string>
    <string name="textoCampoPesoCarga">Peso de carga</string>
    <string name="textoCampoLatitud">Latitud</string>
    <string name="textoCampoLongitud">Longitud</string>
    <string name="t_titulo_Origen">Coordenadas Origen</string>
    <string name="t_titulo_Destino">Coordenadas Destino</string>
    <string name="t_btn_ProgReco">Crear Solicitud</string>
    <string name="t_tit_historicoRecogidas">Histórico de recogidas</string>



</resources>